--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,12 @@
-python==3.11
-matplotlib~=3.9.0
-numpy~=2.0.1
-setuptools~=69.5.1
+pandas~=2.2.2
 scikit-image~=0.24.0
-pillow~=10.4.0
-opencv-python
-pandas
-pandera
-tqdm
-scikit-learn
-scipy
-seaborn
-jupyter
-pyclesperanto
-napari[all]
-magicgui
+numpy~=2.0.1
+matplotlib~=3.9.1
+napari~=0.5.3
+pyclesperanto~=0.12.1
+magicgui~=0.9.1
+tqdm~=4.66.4
+seaborn~=0.13.2
+opencv-python~=4.10.0.84
+pandera~=0.20.3
+python~=3.11
