--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ pandas~=2.2.2
 scikit-image~=0.24.0
 numpy~=2.0.1
 matplotlib~=3.9.1
-napari~=0.5.3
+matplotlib_scalebar~=0.8.1
+napari[all]~=0.5.3
 pyclesperanto~=0.12.1
 magicgui~=0.9.1
 tqdm~=4.66.4
