--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-pandas~=2.2.2
-scikit-image~=0.24.0
-numpy~=2.0.1
-matplotlib~=3.9.1
-matplotlib_scalebar~=0.8.1
-napari[all]~=0.5.3
-pyclesperanto~=0.12.1
-magicgui~=0.9.1
-tqdm~=4.66.4
-seaborn~=0.13.2
-opencv-python~=4.10.0.84
-pandera~=0.20.3
-python~=3.11
+pandas==2.2.3
+scikit-image==0.24.0
+numpy==2.0.0
+matplotlib==3.9.2
+napari==0.5.4
+pyclesperanto==0.16.0
+magicgui==0.9.1
+tqdm==4.67.1
+seaborn==0.13.2
